--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
+    "antd": "^5.24.9",
     "lodash.debounce": "^4.0.8",
     "next": "^15.3.1",
     "react": "^19.1.0",
