--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "antd": "^5.24.9",
+    "apexcharts": "^4.7.0",
     "lodash.debounce": "^4.0.8",
     "next": "^15.3.1",
     "react": "^19.1.0",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0"
   },
